Clean up .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,9 @@
 *.tfstate
 *.tfstate.*
 
+# aws.tf files so that we never publish profile names
+*/aws.tf
+
 # Crash log files
 crash.log
-iam/aws.tf
 .gitignore
-iam/aws.tf
